News UAT/force-app/main/default/objects/BLND_DFAC_Shared_View__c/BLND_DFAC_Shared_View__c.object-meta.xml
<CustomObject>
    <label>DreamFactory Shared View</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DreamFactory Shared Views</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>