News UAT/force-app/main/default/objects/BLND_DFAC_Shared_View__c/fields/BLND_Application__c.field-meta.xml
<CustomField>
    <fullName>BLND_Application__c</fullName>
    <label>Application</label>
    <type>TextArea</type>
</CustomField>