News UAT/force-app/main/default/objects/BLND_DFAC_Shared_View__c/fields/BLND_Owner__c.field-meta.xml
<CustomField>
    <fullName>BLND_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00N30000002PYjhEAG</relationshipName>
    <type>Lookup</type>
</CustomField>